--- a/views/partials/artCard.hbs
+++ b/views/partials/artCard.hbs
@@ -1,5 +1,5 @@
 <div class="card mt-5 mx-3 shadow" style="width: 20%;">
-    <img class="card-img-top" src="{{this.images.0.url}}" alt="">
+    <img class="card-img-top" style="object-fit: cover;" src="{{this.images.0.url}}" alt="">
     <div class="card-body spot-color">
         <h5 class="card-title">{{this.name}} {{ this.lastName}}</h5>
         <p class="card-text">{{this.genres}}</p>
