--- a/views/album-search.hbs
+++ b/views/album-search.hbs
@@ -1,8 +1,12 @@
+<div class="d-flex justify-content-center m-5">
+    <h1 class="">{{artistName}}</h1>
+</div>
 
-{{:name}}
+
 <div class="cards-container col-12 d-flex row justify-content-center">
     {{#each alItems}}
     {{> alCard this}}
     {{/each}}
 </div>
 
+<i class="fa fa-rss" aria-hidden="true"></i>
