--- a/views/tracks.hbs
+++ b/views/tracks.hbs
@@ -5,6 +5,9 @@
     {{/each}}
 </div> --}}
 
+<div class="d-flex justify-content-center m-5">
+    <h1 class="">{{albumName}}</h1>
+</div>
 
 <table class="p-5 table">
   <thead class="thead-dark">
