--- a/views/tracks.hbs
+++ b/views/tracks.hbs
@@ -7,6 +7,8 @@
 
 <div class="d-flex justify-content-center m-5">
     <h1 class="">{{albumName}}</h1>
+    <h2>an album by:</h2>
+    <h1>{{artistName}}</h1>
 </div>
 
 <table class="p-5 table">
